--- a/file3.html
+++ b/file3.html
@@ -68,13 +68,12 @@
 </head>
 <body>
   <div id="container">
-    <h1>Thank you for being so wonderful! 💖</h1>
+    <h1 style="text-align: centre;>Thank you for being so wonderful! 💖</h1>
     <img id="heart" src="https://media1.tenor.com/m/MgUMKz56Vy4AAAAC/happy-labour-day.gif" alt="Heart Animation">
 
     <button id="finishBtn" onclick="window.location.href='index.html'">Done</button>
   </div>
-  <img src="https://media.tenor.com/WoQmh2hWbkYAAAAi/peachcat-cat.gif" alt="cute cat">
-
+  
   <script>
     // Show animation and button with delay
     const heart = document.getElementById('heart');
@@ -89,5 +88,8 @@
       finishBtn.style.display = 'block';
     }, 2200);
   </script>
+  <img src="https://media.tenor.com/WoQmh2hWbkYAAAAi/peachcat-cat.gif" alt="cute cat">
+
 </body>
 </html>
+
