Fix HTML structure and update thank you message

--- a/file3.html
+++ b/file3.html
@@ -68,8 +68,9 @@
 </head>
 <body>
   <div id="container">
-    <h1 style="text-align: centre;>Thank you for being so wonderful! 💖</h1>
+    <h1>Thank you for being so wonderful! 💖</h1>
     <img id="heart" src="https://media1.tenor.com/m/MgUMKz56Vy4AAAAC/happy-labour-day.gif" alt="Heart Animation">
+<img src="https://media.tenor.com/WoQmh2hWbkYAAAAi/peachcat-cat.gif" alt="cute cat">
 
     <button id="finishBtn" onclick="window.location.href='index.html'">Done</button>
   </div>
@@ -88,8 +89,8 @@
       finishBtn.style.display = 'block';
     }, 2200);
   </script>
-  <img src="https://media.tenor.com/WoQmh2hWbkYAAAAi/peachcat-cat.gif" alt="cute cat">
-
+  
 </body>
 </html>
+
 
