--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sorry My Love</title>
+  <title>Sorry My Lovely Friend</title>
   <style>
     body, html {
       margin: 0;
@@ -107,3 +107,4 @@
   </script>
 </body>
 </html>
+
